@@ -1,6 +1,6 @@
 Package: effects
 Version: 4.0-3
-Date: 2018-08-09
+Date: 2018-08-17
 Title: Effect Displays for Linear, Generalized Linear, and Other Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
@@ -10,7 +10,7 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
     person("David", "Firth", role = "ctb"),
     person("Steve", "Taylor", role = "ctb"),
     person("R Core Team", role="ctb"))
-Depends: R (>= 3.2.0), carData
+Depends: R (>= 3.5.0), carData
 Suggests: pbkrtest (>= 0.4-4), nlme, MASS, poLCA, heplots, splines, ordinal, car, knitr
 Imports: lme4, nnet, lattice, grid, colorspace, graphics, grDevices, stats, survey, utils, estimability
 LazyLoad: yes
